--- a/index.html
+++ b/index.html
@@ -4,37 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
     <title>Web Studio Proyect</title>
+    <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="#">WebStudio</a>
-        <ul>
-          <li><a href="#">Estudio</a></li>
-          <li><a href="#">Portafolio</a></li>
-          <li><a href="#">Contactos</a></li>
+        <a class="logo" href="#">WebStudio</a>
+        <ul class="navigation-links list">
+        <li><a class="current navigation" href="/index.html">Estudio</a></li>
+        <li><a class="navigation" href="./portafolio.html">Portafolio</a></li>
+        <li><a class="navigation" href="#">Contactos</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contacts list">
         <!--Envío de correo-->
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header-contact" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
         <!--Llamada telefónica-->
         <li>
-          <a href="tel:+525555296000">+52 55 5529 6000</a>
+          <a class="header-contact" href="tel:+525555296000">+52 55 5529 6000</a>
         </li>
       </ul>
     </header>
     <main>
-      <section>
+      <section class="hero">
         <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
-        <button type="button">Solicite nuestro servicio</button>
+        <button class="button-hero" type="button">Solicite nuestro servicio</button>
       </section>
       <section>
         <h2 style="display: none">BENEFICIOS</h2>
-        <ul>
+        <ul class="list beneficios">
           <li>
             <h3>ATENCIÓN A LOS DETALLES</h3>
             <p>
@@ -70,9 +79,9 @@
         </ul>
       </section>
 
-      <section>
+      <section class="services">
         <h2>A qué nos dedicamos</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/img1.jpg"
@@ -100,9 +109,9 @@
         </ul>
       </section>
 
-      <section>
+      <section class="team">
         <h2>Nuestro Equipo</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/team1.jpg"
@@ -150,20 +159,29 @@
       </section>
     </main>
 
-    <footer>
-      <a href="#">WebStudio</a>
+    <footer class="footer">
+      <a class="logo" href="#">WebStudio</a>
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a
+              class="address"
               href="https://goo.gl/maps/PHKaTiNZTSh5ryRF7"
               target="_blank"
               rel="noopener noreferrer"
               >Calz. Ticomán 500, Ciudad de México, CDMX, México</a
             >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+525555296000 ">+52 55 5529 6000 </a></li>
+          <li>
+            <a class="footer-contact" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a class="footer-contact" href="tel:+525555296000 "
+              >+52 55 5529 6000
+            </a>
+          </li>
         </ul>
       </address>
     </footer>
