--- a/portafolio.html
+++ b/portafolio.html
@@ -31,14 +31,14 @@
         </ul>
       </header>
         <main>
+          <section>
+            <h2 style="display: none">BUTTONS</h2>
             <ul class="list">  
-              <li class="button-projects">    
-                    <button type="button" class="link-project">Todo</button>     
-                    <button type="button" class="link-project">Sitios-web</button>
-                    <button type="button" class="link-project">Aplicaciones</button>
-                    <button type="button" class="link-project">Diseño</button>
-                    <button type="button" class="link-project">Marketing</button>
-              </li>   
+              <li class="button-projects"><button type="button" class="link-project active-button">Todo</button></li>     
+              <li class="button-projects"><button type="button" class="link-project">Sitios-web</button></li>
+              <li class="button-projects"><button type="button" class="link-project">Aplicaciones</button></li>
+              <li class="button-projects"><button type="button" class="link-project">Diseño</button></li>
+              <li class="button-projects"><button type="button" class="link-project">Marketing</button></li>
             </ul>
             <ul class="list projects">
                 <li>
